--- a/dashboard.html
+++ b/dashboard.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
 <meta charset="UTF-8">
@@ -17,63 +17,81 @@
   <a href="#" onclick="logout()">🚪 تسجيل الخروج</a>
 </div>
 
-<div class="container" id="output"></div>
+<div class="container" id="studentData">
+  <p style="text-align:center;">جارٍ تحميل البيانات...</p>
+</div>
 
 <script>
 if(localStorage.getItem("loggedIn") !== "true") window.location.href="index.html";
 
-const sheetURL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vReghaYoMk3f8ffSBLRHIwZieEWCfk5Yx8W6c843TXkC6wpA78Z0X5nw21RRpxMdQ/pub?gid=1229272896&single=true&output=csv";
-
 async function loadStudent(){
-  const code = localStorage.getItem("studentCode");
-  const parent = localStorage.getItem("parentNumber");
-  const output = document.getElementById("output");
-  output.innerHTML="<p style='text-align:center;'>⏳ جاري تحميل البيانات...</p>";
-  try{
-    const resp = await fetch(sheetURL);
-    const text = await resp.text();
-    const rows = text.split("\n").map(r=>r.split(","));
-    const header = rows[0].map(h=>h.trim());
-    const dataRows = rows.slice(1);
-    const objects = dataRows.map(r=>{
-      const obj={};
-      for(let i=0;i<header.length;i++) obj[header[i]]=(r[i]||"").trim();
-      return obj;
-    });
-    const student = objects.find(o=>o["كود الطالب"]===code && o["رقم ولي الامر"]===parent);
-    if(!student){ output.innerHTML="<p style='color:red; text-align:center;'>❌ لم أجد بيانات.</p>"; return; }
+  const studentData = JSON.parse(localStorage.getItem("studentData"));
+  if(!studentData) {
+    document.getElementById("studentData").innerHTML = "<p>❌ لم يتم العثور على بيانات الطالب.</p>";
+    return;
+  }
 
-    localStorage.setItem("studentClass", student["الصف"] || "");
-    localStorage.setItem("studentName", student["اسم الطالب"] || "");
+  const student = studentData;
+  const output = document.getElementById("studentData");
+  let html = "";
 
-    let html="";
-    const studentFields=["id","رقم الطالب","اسم الطالب","الجنس","الصف","القاعة","رقم ولي الامر","رقم الخط","الملاحظات"];
-    html+=`<div class="section info"><h3>المعلومات العامة</h3><table>`;
-    studentFields.forEach(f=>{ if(f in student) html+=`<tr><th>${f}</th><td>${student[f]}</td></tr>`; });
-    html+="</table></div>";
+  html += `<div class="section">
+    <h3>🧾 المعلومات العامة</h3>
+    <table>
+      <tr><th>الاسم الكامل</th><td>${student["اسم الطالب"]}</td></tr>
+      <tr><th>الصف</th><td>${student["الصف"]}</td></tr>
+      <tr><th>القاعة</th><td>${student["القاعة"]}</td></tr>
+      <tr><th>الجنس</th><td>${student["الجنس"]}</td></tr>
+      <tr><th>رقم الطالب</th><td><input type="text" id="studentNumber" value="${student["رقم الطالب"] || ""}"></td></tr>
+      <tr><th>رقم ولي الأمر</th><td>${student["رقم ولي الامر"] || "غير متوفر"}</td></tr>
+      <tr><th>رقم الخط</th><td><input type="text" id="line" value="${student["رقم الخط"]||""}"></td></tr>
+      <tr><th>العنوان</th><td><input type="text" id="address" value="${student["العنوان"]||""}"></td></tr>
+      <tr><th>المدرسة القادمة منها</th><td><input type="text" id="prevSchool" value="${student["المدرسة السابقة"]||""}"></td></tr>
+    </table>
+    <div style="text-align:center; margin-top:10px;">
+      <button onclick="saveGeneral()">💾 حفظ التعديلات</button>
+    </div>
+  </div>`;
 
-    const financeFields=["القسط 1","تاريخ 1","القسط 2","تاريخ 2","القسط 3","تاريخ 3","الباقي الكلي","المبلغ الكلي"];
-    html+=`<div class="section finance"><h3>المعلومات المالية</h3><table>`;
-    financeFields.forEach(f=>{ if(f in student) html+=`<tr><th>${f}</th><td>${student[f]}</td></tr>`; });
-    html+="</table></div>";
+  // القسم المالي
+  html += `<div class="section"><h3>💰 المعلومات المالية</h3><table>
+      <tr><th>القسط 1</th><td>${student["القسط 1"]||""}</td></tr>
+      <tr><th>تاريخ 1</th><td>${student["تاريخ 1"]||""}</td></tr>
+      <tr><th>القسط 2</th><td>${student["القسط 2"]||""}</td></tr>
+      <tr><th>تاريخ 2</th><td>${student["تاريخ 2"]||""}</td></tr>
+      <tr><th>القسط 3</th><td>${student["القسط 3"]||""}</td></tr>
+      <tr><th>تاريخ 3</th><td>${student["تاريخ 3"]||""}</td></tr>
+  </table></div>`;
 
-    const subjectsColumns = ["الاسلامية","عربي","الانكليزي","الرياضيات","الكيمياء","الفيزياء","الاحياء","اجتماعيات","حاسوب","رياضة","فنية","السلوك"];
-    subjectsColumns.forEach(sub=>{
-      html+=`<div class="section grades"><h3>الدرجات - ${sub}</h3><table><tr><th>تقدير</th><th>السعي</th><th>الامتحان النهائي</th></tr>`;
-      html+=`<tr><td>${student["التقدير"]||""}</td><td>${student["السعي"]||""}</td><td>${student["الامتحان النهائي"]||""}</td></tr></table></div>`;
-    });
+  // الدرجات
+  html += `<div class="section"><h3>📘 الدرجات</h3>
+  <p>${student["الدرجات"]||"لا توجد بيانات حالياً."}</p></div>`;
 
-    const noteFields=["ملاحظات كرت","ملاحظات النتيجة","الغياب","اختلاق مشاكل داخل المدرسة"];
-    html+=`<div class="section notes"><h3>الملاحظات والغياب</h3><table>`;
-    noteFields.forEach(f=>{ if(f in student) html+=`<tr><th>${f}</th><td>${student[f]}</td></tr>`; });
-    html+="</table></div>";
+  // الملاحظات والغياب
+  html += `<div class="section"><h3>📝 الملاحظات والغياب</h3>
+  <p>${student["ملاحظات"]||"لا توجد ملاحظات"}</p></div>`;
 
-    output.innerHTML = html;
-
-  }catch(err){ console.error(err); output.innerHTML="<p style='color:red; text-align:center;'>❌ حدث خطأ.</p>"; }
+  output.innerHTML = html;
 }
 
-function logout(){ localStorage.clear(); window.location.href="index.html"; }
+function saveGeneral(){
+  const studentData = JSON.parse(localStorage.getItem("studentData"));
+  if(!studentData) return alert("حدث خطأ في تحميل البيانات");
+
+  // تحديث الحقول القابلة للتعديل فقط
+  studentData["رقم الطالب"] = document.getElementById("studentNumber").value;
+  studentData["رقم الخط"] = document.getElementById("line").value;
+  studentData["العنوان"] = document.getElementById("address").value;
+  studentData["المدرسة السابقة"] = document.getElementById("prevSchool").value;
+
+  localStorage.setItem("studentData", JSON.stringify(studentData));
+  alert("✅ تم حفظ التعديلات بنجاح");
+}
+
+function logout(){
+  localStorage.clear();
+  window.location.href = "index.html";
+}
 
 loadStudent();
 </script>
