--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>نسيت الكود - استرجاع كود الطالب</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>تسجيل الدخول / استرجاع الكود</title>
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
 <style>
@@ -16,45 +16,73 @@
 body{
   font-family:'Cairo',sans-serif;
   direction:rtl;
+  background:linear-gradient(180deg,#f3f8ff,#ffffff);
   margin:0;
   min-height:100vh;
   display:flex;
   align-items:center;
   justify-content:center;
-  background:linear-gradient(180deg,#f6fbff,#ffffff);
-  padding:18px;
-  overflow-x:hidden;
+  padding:20px;
+}
+.container{
+  position:relative;
+  width:100%;
+  max-width:420px;
+  overflow:hidden;
 }
 .box{
-  max-width:760px;
   width:100%;
   background:var(--card);
   border-radius:14px;
-  box-shadow:0 12px 30px rgba(0,0,0,0.09);
-  padding:24px;
-  opacity:0;
-  transform:translateY(30px);
+  box-shadow:0 12px 28px rgba(0,0,0,0.08);
+  padding:30px;
+  position:absolute;
+  top:0;
+  left:0;
 }
-.header{display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;gap:10px}
-.header h2{margin:0}
-.form{margin-top:14px;display:flex;flex-direction:column;gap:12px}
-.input{display:flex;align-items:center;border:1px solid #eee;padding:10px;border-radius:8px;background:#fafafa}
-.input input{border:0;outline:0;flex:1;background:transparent;font-size:15px}
-.btn{
-  padding:10px 14px;
+h2{margin-bottom:10px;text-align:center}
+.input{
+  margin:16px 0;
+  display:flex;
+  border:1px solid #eee;
   border-radius:8px;
-  border:0;
-  cursor:pointer;
-  font-weight:700;
-  transition:all 0.3s ease;
+  background:#fafafa;
+  padding:10px;
 }
-.btn:hover{transform:translateY(-2px);box-shadow:0 4px 12px rgba(0,0,0,0.1)}
-.btn-primary{background:var(--blue);color:#fff}
-.btn-secondary{background:#f0f0f0;color:#333}
-.hint{font-size:13px;color:#666}
+.input input{
+  border:none;
+  outline:none;
+  flex:1;
+  background:transparent;
+  font-size:16px;
+  text-align:center;
+}
+.btn{
+  background:var(--blue);
+  color:#fff;
+  border:none;
+  padding:10px 16px;
+  border-radius:8px;
+  font-weight:700;
+  cursor:pointer;
+  transition:0.3s;
+  width:100%;
+  margin-top:10px;
+}
+.btn:hover{transform:translateY(-2px);box-shadow:0 6px 12px rgba(0,0,0,0.1)}
+.forgot,.back{
+  margin-top:14px;
+  font-size:14px;
+  text-align:center;
+}
+.forgot a,.back a{
+  color:var(--blue);
+  text-decoration:underline;
+  cursor:pointer;
+}
+/* شاشة استرجاع */
 .result{margin-top:16px;min-height:120px;display:flex;align-items:center;justify-content:center;}
 .card{padding:18px;border-radius:12px;background:linear-gradient(180deg,#fff,#f7fbff);box-shadow:0 12px 26px rgba(0,0,0,0.06);text-align:center;width:100%;max-width:520px;}
-.card h3{margin:0 0 8px 0;font-size:18px}
 .codeBox{margin-top:12px;font-size:26px;font-weight:800;letter-spacing:6px;padding:12px 18px;border-radius:10px;display:inline-block;background:linear-gradient(90deg,#fff,#f8fffb);box-shadow:0 6px 18px rgba(0,0,0,0.06);}
 .chars{display:inline-block;opacity:0}
 .chars.visible{opacity:1;animation:fadeUp .6s ease forwards}
@@ -64,85 +92,69 @@ body{
 .copyBtn{margin-top:12px;padding:10px 12px;border-radius:8px;border:0;cursor:pointer;font-weight:700}
 .copyBtn.success{background:var(--success);color:#fff}
 .copyBtn.fail{background:#f0f0f0;color:#333}
-.back{margin-top:14px;text-align:center}
-.back a{color:var(--blue);text-decoration:underline}
 </style>
 </head>
 <body>
-<div class="box" role="main">
-  <div class="header">
-    <h2>نسيت الكود الخاص بي</h2>
-    <div class="hint">أدخل اسم الطالب ورقم ولي الأمر لاسترجاع الكود</div>
+<div class="container">
+  <!-- شاشة تسجيل الدخول -->
+  <div class="box" id="loginScreen">
+    <h2>تسجيل الدخول</h2>
+    <div class="input">
+      <input type="text" id="studentCode" placeholder="أدخل الكود هنا">
+    </div>
+    <button class="btn" id="loginBtn">تسجيل الدخول</button>
+    <div class="forgot">
+      <a id="goForgot">نسيت الكود؟</a>
+    </div>
   </div>
 
-  <div class="form" id="forgotForm">
+  <!-- شاشة استرجاع الكود -->
+  <div class="box" id="forgotScreen" style="left:100%;">
+    <h2>نسيت الكود الخاص بي</h2>
     <div class="input"><input id="parent" placeholder="رقم ولي الأمر" inputmode="numeric" /></div>
-    <div class="input"><input id="studentName" placeholder="اسم الطالب (باللغة العربية كما في السجل)" /></div>
-
-    <!-- زر تسجيل الدخول أسفل الحقول -->
-    <button class="btn btn-secondary" id="loginBtn">تسجيل الدخول</button>
-
-    <div style="display:flex;gap:8px;justify-content:center">
-      <button class="btn btn-primary" id="searchBtn">استرجاع الكود</button>
-      <button class="btn" id="clearBtn">مسح الحقول</button>
-    </div>
-
-    <div class="result" id="resultArea">
-      <div style="text-align:center;color:#666">النتيجة ستظهر هنا بعد البحث</div>
-    </div>
-
-    <div class="back">
-      <a href="index.html">◀ العودة إلى صفحة تسجيل الدخول</a>
-    </div>
+    <div class="input"><input id="studentName" placeholder="اسم الطالب" /></div>
+    <button class="btn btn-primary" id="searchBtn">استرجاع الكود</button>
+    <button class="btn btn-secondary" id="clearBtn">مسح الحقول</button>
+    <div class="result" id="resultArea"><div style="text-align:center;color:#666">النتيجة ستظهر هنا بعد البحث</div></div>
+    <div class="back"><a id="backLogin">◀ العودة إلى تسجيل الدخول</a></div>
   </div>
 </div>
 
 <script>
-/* GSAP Animation */
-window.addEventListener('DOMContentLoaded',()=>{
-  gsap.to('.box',{duration:0.8,opacity:1,y:0,ease:"power3.out"});
-  gsap.from('.input',{duration:0.8,opacity:0,x:40,stagger:0.1,delay:0.2});
-  gsap.from('#loginBtn',{duration:0.8,opacity:0,y:20,delay:0.5});
-  gsap.from('#searchBtn',{duration:0.8,opacity:0,scale:0.8,delay:0.7});
-  gsap.from('#clearBtn',{duration:0.8,opacity:0,scale:0.8,delay:0.8});
+const loginScreen=document.getElementById('loginScreen');
+const forgotScreen=document.getElementById('forgotScreen');
+
+/* GSAP animation عند التحميل */
+gsap.from([loginScreen.querySelector('h2'),loginScreen.querySelector('.input'),loginScreen.querySelector('.btn'),loginScreen.querySelector('.forgot')],{
+  duration:0.8,opacity:0,y:30,stagger:0.15
 });
 
-/* نفس رابط الجدول */
+/* التنقل بين الشاشتين */
+document.getElementById('goForgot').addEventListener('click',()=>{
+  gsap.to(loginScreen,{duration:0.6,x:-window.innerWidth,ease:"power3.inOut"});
+  gsap.to(forgotScreen,{duration:0.6,x:-window.innerWidth,ease:"power3.inOut"});
+});
+document.getElementById('backLogin').addEventListener('click',()=>{
+  gsap.to(loginScreen,{duration:0.6,x:0,ease:"power3.inOut"});
+  gsap.to(forgotScreen,{duration:0.6,x:window.innerWidth,ease:"power3.inOut"});
+});
+
+/* تسجيل الدخول */
+document.getElementById('loginBtn').addEventListener('click',()=>{
+  const code=document.getElementById('studentCode').value.trim();
+  if(!code){alert('يرجى إدخال الكود');return;}
+  alert('تم تسجيل الدخول بنجاح ✅');
+});
+
+/* استرجاع الكود */
 const sheetURL="https://docs.google.com/spreadsheets/d/e/2PACX-1vReghaYoMk3f8ffSBLRHIwZieEWCfk5Yx8W6c843TXkC6wpA78Z0X5nw21RRpxMdQ/pub?gid=1229272896&single=true&output=csv";
-
-function parseCSV(text){
-  const rows=[];let cur='',row=[],inQuotes=false;
-  for(let i=0;i<text.length;i++){
-    const ch=text[i],next=text[i+1];
-    if(ch=='"'){if(inQuotes&&next=='"'){cur+='"';i++;continue;}inQuotes=!inQuotes;continue;}
-    if(ch=='\r')continue;
-    if(ch==','&&!inQuotes){row.push(cur);cur='';continue;}
-    if(ch=='\n'&&!inQuotes){row.push(cur);rows.push(row);row=[];cur='';continue;}
-    cur+=ch;
-  }
-  if(cur!=''||row.length>0){row.push(cur);rows.push(row);}
-  return rows;
-}
-function normalizeKey(k){return (k||'').toString().trim();}
-async function fetchSheetObjects(){
-  const resp=await fetch(sheetURL);
-  if(!resp.ok)throw new Error("فشل جلب البيانات");
-  const text=await resp.text();
-  const rows=parseCSV(text).filter(r=>r.some(c=>c.trim()!=''));
-  if(rows.length===0)return{header:[],rows:[]};
-  const header=rows[0].map(h=>normalizeKey(h));
-  const dataRows=rows.slice(1);
-  const objects=dataRows.map(r=>{
-    const obj={};
-    for(let i=0;i<header.length;i++){obj[header[i]]=(r[i]||'').toString().trim();}
-    return obj;
-  });
-  return{header,rows:objects};
-}
-
 const resultArea=document.getElementById('resultArea');
 const parentInput=document.getElementById('parent');
 const nameInput=document.getElementById('studentName');
+
+function parseCSV(text){const rows=[];let cur='',row=[],inQuotes=false;for(let i=0;i<text.length;i++){const ch=text[i],next=text[i+1];if(ch=='"'){if(inQuotes&&next=='"'){cur+='"';i++;continue;}inQuotes=!inQuotes;continue;}if(ch=='\r')continue;if(ch==','&&!inQuotes){row.push(cur);cur='';continue;}if(ch=='\n'&&!inQuotes){row.push(cur);rows.push(row);row=[];cur='';continue;}cur+=ch;}if(cur!=''||row.length>0){row.push(cur);rows.push(row);}return rows;}
+function normalizeKey(k){return (k||'').toString().trim();}
+async function fetchSheetObjects(){const resp=await fetch(sheetURL);if(!resp.ok)throw new Error("فشل جلب البيانات");const text=await resp.text();const rows=parseCSV(text).filter(r=>r.some(c=>c.trim()!=''));if(rows.length===0)return{header:[],rows:[]};const header=rows[0].map(h=>normalizeKey(h));const dataRows=rows.slice(1);const objects=dataRows.map(r=>{const obj={};for(let i=0;i<header.length;i++){obj[header[i]]=(r[i]||'').toString().trim();}return obj;});return{header,rows:objects};}
 function cleanNumber(n){if(!n)return'';n=n.toString().trim();if(n.startsWith('0'))n=n.replace(/^0+/,'');return n;}
 function showError(msg){resultArea.innerHTML=`<div class="card err">${msg}</div>`;}
 function showMessageHTML(html){resultArea.innerHTML=html;}
@@ -153,69 +165,40 @@ function revealCodeAnim(codeStr){
   <div><button class="copyBtn" id="copyBtn">نسخ الكود</button></div>
   </div>`;
   showMessageHTML(html);
-  const box=document.getElementById('codeBox');
-  box.innerHTML='';
+  const box=document.getElementById('codeBox');box.innerHTML='';
   const chars=Array.from(codeStr);
   chars.forEach((ch,idx)=>{
-    const span=document.createElement('span');
-    span.textContent=ch;
-    span.className='chars';
-    box.appendChild(span);
+    const span=document.createElement('span');span.textContent=ch;span.className='chars';box.appendChild(span);
     setTimeout(()=>span.classList.add('visible'),120*idx);
   });
   setTimeout(()=>{
     const btn=document.getElementById('copyBtn');
     btn.addEventListener('click',async()=>{
-      try{
-        await navigator.clipboard.writeText(codeStr);
-        btn.textContent='تم النسخ ✓';
-        btn.classList.add('success');
+      try{await navigator.clipboard.writeText(codeStr);btn.textContent='تم النسخ ✓';btn.classList.add('success');
         setTimeout(()=>{btn.textContent='نسخ الكود';btn.classList.remove('success');},2000);
-      }catch(e){
-        btn.textContent='نسخ (غير مدعوم)';
-        btn.classList.add('fail');
-      }
+      }catch(e){btn.textContent='نسخ (غير مدعوم)';btn.classList.add('fail');}
     });
   },120*chars.length+80);
 }
-
-/* البحث */
 document.getElementById('searchBtn').addEventListener('click',async()=>{
   const parent=cleanNumber(parentInput.value);
   const name=(nameInput.value||'').toString().trim().toLowerCase();
   if(!parent||!name){showError('الرجاء إدخال اسم الطالب ورقم ولي الأمر');return;}
   showMessageHTML(`<div style="color:#666">⏳ جاري البحث...</div>`);
   try{
-    const{header,rows}=await fetchSheetObjects();
+    const {header,rows}=await fetchSheetObjects();
     const found=rows.find(r=>{
-      const p=cleanNumber(r['رقم ولي الامر']||r['رقم ولي الأمر']||r['ولي الامر']||r['parent']||'');
+      const p=cleanNumber(r['رقم ولي الامر']||r['رقم ولي الأمر']||r['وليامر']||r['parent']||'');
       const studentName=(r['اسم الطالب']||r['اسم']||r['Name']||'').toString().trim().toLowerCase();
-      return p===parent&&studentName===name;
+      return p===parent && studentName===name;
     });
     if(!found){showError('❌ البيانات خاطئة — حاول أن تتذكر أو تراجع قسم الحوكمة');return;}
     const code=found['كود الطالب']||found['كود']||found['id']||found['ID']||'';
     if(!code){showError('لم يتم العثور على كود في السجل — تواصل مع قسم الحوكمة');return;}
     revealCodeAnim(code);
-  }catch(err){
-    console.error(err);
-    showError('حدث خطأ أثناء الوصول إلى الملف. تأكد من اتصال الإنترنت وحاول مرة أخرى.');
-  }
+  }catch(err){console.error(err);showError('حدث خطأ أثناء الوصول إلى الملف. تأكد من اتصال الإنترنت وحاول مرة أخرى.');}
 });
-
-document.getElementById('clearBtn').addEventListener('click',()=>{
-  parentInput.value='';nameInput.value='';
-  resultArea.innerHTML='<div style="text-align:center;color:#666">النتيجة ستظهر هنا بعد البحث</div>';
-});
-
-/* تسجيل الدخول */
-document.getElementById('loginBtn').addEventListener('click',()=>{
-  window.location.href="index.html";
-});
-
-/* دعم Enter */
-document.getElementById('forgotForm').addEventListener('keydown',(e)=>{
-  if(e.key==='Enter'){e.preventDefault();document.getElementById('searchBtn').click();}
-});
+document.getElementById('clearBtn').addEventListener('click',()=>{parentInput.value='';nameInput.value='';resultArea.innerHTML='<div style="text-align:center;color:#666">النتيجة ستظهر هنا بعد البحث</div>';});
 </script>
 </body>
 </html>
